update expectations for ci env